--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "js/openspendingjs"]
 	path = js/openspendingjs
-	url = git://github.com/openspending/openspendingjs.git
+	url = https://github.com/openspending/openspendingjs.git
